<resources>

    <string name="app_name">LunchList</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_lunch_list">LunchList</string>
    
    <string name="name">name</string>
    <string name="address">address</string>
    <string name="notes">notes</string>
    <string name="type">type</string>
    <string name="feed">feed</string>
    
    <string name="sort_order">sort_order</string>
    
    <string name="take_out">Take-Out</string>
    <string name="sit_down">Sit-Down</string>
    <string name="delivery">Delivery</string>
    <string name="take_out_type">take_out</string>
    <string name="sit_down_type">sit_down</string>
    <string name="delivery_type">delivery</string>
    
    <!-- Alarm Activity Strings -->
    <string name="ringtone_error">Exception in playing ringtone</string>
    
    <!-- Detail Form XML Strings -->
    <string name="address_label">Address:</string>
    <string name="feed_hint">Feed URL</string>
    <string name="name_label">Name:</string>
    <string name="notes_hint">Notes</string>
    <string name="notes_label">Notes:</string>
    <string name="save">Save</string>
    <string name="type_label">Type:</string>
    <string name="location">Location:</string>
    <string name="not_set">(not set)</string>
    <string name="phone">Phone:</string>
    
    <!-- Detail Form Java Strings -->
    <string name="no_internet_error">Sorry, the Internet is not available</string>
    <string name="location_saved">Location saved</string>
    
    <!-- Feed Activity Strings -->
    <string name="exception">Exception!</string>
    <string name="OK">OK</string>
    <string name="lunch_list_activity">LunchListActivity</string>
    <string name="feed_parsing_exception">Exception parsing feed</string>
    
    <!-- Alarm XML Strings -->
    <string name="lunch_time">It\'s time for lunch!</string>
    
    <!-- EditPreferences Strings -->
    <string name="alarm">alarm</string>
    <string name="alarm_time">alarm_time</string>
    
    <!-- Preferences XML strings -->
    <string name="notificiation_summary">Check if you want a status bar icon at lunchtime, or uncheck for a full-screen notice</string>
    <string name="notification_title">Use a Notification</string>
    <string name="alarm_title">Sound a Lunch Alarm</string>
    <string name="alarm_time_summary">Set your desired time for the lunch alarm</string>
    <string name="alarm_time_title">Lunch Alarm Time</string>
    <string name="alarm_summary">Check if you want to know when it is time for lunch</string>
    <string name="pref_order">Choose a sort order</string>
    <string name="pref_summary">Choose the order the list uses</string>
    <string name="default_time">12:00</string>
    <string name="ringtone_title">Alarm Ringtone</string>
    <string name="ringtone_summary">Indicate the ringtone to play when it is lunctime</string>
    
    <!-- OnAlarmReceiver Strings -->
    <string name="use_notification">use_notification</string>
    <string name="lunch_notification_message">It\'s time for lunch! Aren\'t you hungry?</string>
    
    <!-- WidgetService steings -->
    <string name="empty">No restaurants!</string>
    
    <!-- Detail Options Strings -->
    <string name="call">Call</string>
    <string name="map_title">Show on Map</string>
    
</resources>