<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="sort_order"
        android:title="Sort Order"
        android:summary="@string/pref_summary"
        android:entries="@array/sort_names"
        android:entryValues="@array/sort_clauses"
        android:dialogTitle="@string/pref_order" />
    <CheckBoxPreference
        android:key="alarm"
        android:title="@string/alarm_title"
        android:summary="@string/alarm_summary" />
    <csci498.abajwa.lunchlist.TimePreference
        android:key="alarm_time"
        android:title="@string/alarm_time_title"
        android:defaultValue="@string/default_time"
        android:summary="@string/alarm_time_summary"
        android:dependency="alarm" />
    <CheckBoxPreference 
        android:key="use_notification"
        android:title="@string/notification_title"
        android:defaultValue="true"
        android:summary="@string/notificiation_summary"
        android:dependency="alarm" />
</PreferenceScreen>